# advent2023_nyxhemera

./: LICENSE  pyproject.toml
advent2023/: aoc_utils.py  main.py  utils.py
advent2023/aoc1/: utils.py
advent2023/aoc10/: pipe.py
advent2023/aoc2/: aoc_utils.py
advent2023/aoc3/: utils.py
advent2023/aoc4/: aoc_utils.py  utils.py
advent2023/aoc5/: almanach.py
advent2023/aoc6/: utils.py
advent2023/aoc7/: aoc_utils.py  hand.py
advent2023/aoc8/: desert_map.py
advent2023/aoc9/: pascal.py
data/tests/: aoc5_test.txt
tests/aoc1/: test_aoc1_utils.py
tests/aoc2/: test_aoc2_utils.py
tests/aoc3/: test_aoc3_utils.py
tests/aoc5/: test_Almanach.py
tests/aoc7/: test_Hand.py
tests/aoc9/: test_pascal.py
