[tool.poetry]
name = "advent2023"
version = "0.1.0"
description = "Some answers to advent of code 2023"
authors = ["NyxAether <contact.nyxhemera@gmail.com>"]
license = "BSD 2"
readme = "README.md"



[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
black = "^23.11.0"
pytest = "^7.4.3"
pandas = "^2.1.4"
mypy = "^1.7.1"
scipy = "^1.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[flake8]
max-line-length = 120

[tool.poetry.scripts]
advent = 'advent2023.main:main'